kubernetes/mkdocs-homelab-rpi/deployment/mkdocs-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mkdocs-homelab-rpi
  name: mkdocs-homelab-rpi
  namespace: mkdocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mkdocs-homelab-rpi
  template:
    metadata:
      labels:
        app: mkdocs-homelab-rpi
    spec:
      containers:
      - image: squidfunk/mkdocs-material:9.6.17
        name: mkdocs
        securityContext:
          runAsNonRoot: true
          runAsUser: 2000
          runAsGroup: 2000
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
          - name: data
            mountPath: /docs
      securityContext:
        fsGroup: 2000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mkdocs-homelab-rpi-data
