kubernetes/mkdocs-homelab-rpi/deployment/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-ui
  namespace: mkdocs
spec:
  hostnames:
  - homelab-rpi.hyrsh.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private-gateway
    namespace: gateways
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mkdocs-homelab-rpi-svc
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
